--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/img/favicon.png" />
 
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
 
@@ -50,7 +50,7 @@
     <link rel="stylesheet" href="/styles/style.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>ElectroHomeopathic Clinic</title>
   </head>
   <body>
     <div id="root"></div>
