Created Admin Dashboard

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
 	<!-- Magnific Popup CSS -->
     <link rel="stylesheet" href="/css/magnific-popup.css">
+
+	<!-- Argon Dashboard -->
+	<link rel="stylesheet" href="/css/dashboard.css">
+	<link rel="stylesheet" href="/css/dashboard.rtl.css">
 		
 	<!-- Medipro CSS -->
     <link rel="stylesheet" href="/css/normalize.css">
