--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="/css/icofont.css">
 
 	<!-- Slicknav -->
-	<link rel="stylesheet" href="/css/slicknav.min.css">
+	<!--<link rel="stylesheet" href="/css/slicknav.min.css">-->
 
 	<!-- Owl Carousel CSS -->
     <link rel="stylesheet" href="/css/owl-carousel.css">
@@ -75,7 +75,7 @@
 	<!-- Jquery Nav JS -->
     <script src="/js/jquery.nav.js"></script>
 	<!-- Slicknav JS -->
-	<script src="/js/slicknav.min.js"></script>
+	<!--<script src="/js/slicknav.min.js"></script>-->
 	<!-- ScrollUp JS -->
     <script src="/js/jquery.scrollUp.min.js"></script>
 	<!-- Niceselect JS -->
